@startuml
class Library {
  +registerMember(m: Member)
  +addBook(b: Book)
}

class Member {
  +memberId: String
  +name: String
  +borrowCopy(c: Copy): Loan
  +returnCopy(c: Copy)
}

class Book {
  +isbn: String
  +title: String
}

class Copy {
  +copyId: String
  +status: CopyStatus
}

class Loan {
  +loanDate: Date
  +dueDate: Date
  +close()
}

enum CopyStatus {
  Available
  OnLoan
}

Library "1" o-- "*" Book
Book "1" o-- "*" Copy
Member "1" -- "*" Loan
Copy "1" -- "0..1" Loan
@enduml